    * ADD: rc.fwinfo to get info about TV model and LG firmware logged at boot
    * ADD: nvram-edit commandline tool to get info from NVRAM dump and change some locked values
    * ADD: libncurses.so.5.7 and recompiled top binary to use the lib
    * ADD: lua, luac, liblua.so.5.1.4
    * ADD: libSDL-1.2.so.0.11.3 with DirectFB access for additional SDL apps that can now use TV screen
    * ADD: OPENRELEASE 2.1.2 by rtokarev & jenya's uinput branch
    * ADD: CGI web page for remote control by mihaifireball under http://ip_of_tv/remote/
    * ADD: possibility to remove all OpenLGTV BCM configs or just NetCast configs for recreating defaults at next boot using WebUI
    * ADD: bootlog is copied at each boot with usb stick/disk plugged in to OpenLGTV_BCM/OpenLGTV_BCM.log file or OpenLGTV_BCM/OpenLGTV_BCM-firstboot.log when it's first boot
    * ADD: very early prototype of M3U IPTV lists parser (needs to bookmark 'http://127.0.0.1:88/vod/m3u.cgi?url=http://yours_url_to/file.m3u' in Internet Browser)
    * ADD: support for customised /mnt/user/www/links.html file with NetCast links
    * ADD: some useful device files - input/event devices increased from 5 to 10, pts devices from 5 to 10, /dev/cdrom,dvd,sg..., /dev/uinput, /dev/rfcomm0-49, /dev/vhci
    * ADD: netcast_config_check.sh script to verify which NetCast config versions are used
    * ADD: support for both old and new NetCast configs and NetCast upgrade/downgrade handling
    * ADD: uinput kernel driver
    * ADD: hotplug wrapper to handle /lib/firmware/* loading when needed in future and USB storage/hid handling so from now on USB stick/disk does not need to be connected at boot
    * ADD: with new hotplug-capable scripts Yahoo Widgets Engine/Data from USB storage devices is hotpluggable also - on connect YWE gots prepared and on umount from remote it gets stopped