@@ -1,4 +1,5 @@
 disable_telnet=0                      #Disable telnet service (check if SSH works OK first)
+disable_lg_network_upgrades=1         #Disable LG firmware Internet upgrades
 alternative_port_for_ssh=0            #Use alternative port (2222) for SSH connections
 netcast_config_add_openlgtv=1         #Add OpenLGTV BCM icon to NetCast configs
 netcast_config_add_yahoo=0            #Add Yahoo Widgets icon to NetCast configs
