@@ -1,7 +1,8 @@
 # Possible values are:
 # - default - default action
 # - K_<KEY> - defautl action for key <KEY>
-# - K-X<KEY_CODE> - key with keycode (<KEYCODE> in hex: for example AA)
+# - K_X<KEY_CODE> - key with keycode (<KEYCODE> in hex: for example AA)
+# - SYSTEM: <COMMAND> - execute `sh -c <COMMAND>'
 # - screen_mute - switch off screen
 # - soft_poweroff - switch off screen + lock control + volume mute
 # - osd_select - enable/disable osd
