@@ -1,1 +1,1 @@
-0.5.0-beta
+0.5.0-beta1
