@@ -1,1 +1,1 @@
-libopenrelease.so.2.1.2.uinput
+libopenrelease.so-2.1.2-5-g0a346da
