@@ -1,5 +1,5 @@
 #!/bin/sh
-# OpenLGTV BCM 0.5.0-beta installation script v.1.94 by xeros
+# OpenLGTV BCM 0.5.0-beta1 installation script v.1.94 by xeros
 # Source code released under GPL License
 
 # it needs $file.sqf and $file.sha1 files in the same dir as this script
@@ -30,7 +30,7 @@ fi
 # forced rebooting option disabled for manual upgrade/installations
 #rebooting=0
 
-ver=0.5.0-beta
+ver=0.5.0-beta1
 supported_rootfs_ver="V1.00.51 Mar 01 2010"
 supported_rootfs_ver2011="V1.00.18 Jan 10 2011"
 development=1
@@ -183,7 +183,7 @@ sleep 1
 
 echo "" | tee -a $log
 date 2>&1 | tee -a $log
-echo "OpenLGTV BCM 0.5.0-beta installation script for $platform platform by xeros" | tee -a $log
+echo "OpenLGTV BCM 0.5.0-beta1 installation script for $platform platform by xeros" | tee -a $log
 
 #if [ "$2" = "autoupgrade" ]
 if [ "autoupgrade" = "1" ]
